--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,6 +5,7 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
+    "jinja2>=3.1.6",
     "langchain-google-vertexai>=2.1.2",
     "langchain-openai>=1.0.0a4",
     "langchain[google-genai]>=1.0.0a14",
